# rust-eml-nl

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: checks.yml  publish.yml  rust.yml
src/: common.rs  error.rs  lib.rs  qualified_name.rs  reader.rs  writer.rs
src/common/: affiliation_identifier.rs  candidate_identifier.rs  canonicalization_method.rs  contest_identifier.rs  creation_date_time.rs  election_domain.rs  election_tree.rs  issue_date.rs  list_data.rs  locality_name.rs  managing_authority.rs  mod.rs  person_name.rs  postal_code.rs  reporting_unit_identifier.rs  transaction_id.rs
src/documents/: candidate_list.rs  candidate_lists.rs  election_definition.rs  mod.rs  polling_stations.rs
src/io/: mod.rs  qualified_name.rs  reader.rs  writer.rs
src/test-emls/polling_stations/: eml110b_test.eml.xml
src/utils/: affiliation_id_type.rs  affiliation_type.rs  candidate_id_type.rs  contest_id.rs  date_time.rs  election_category.rs  election_domain_id.rs  election_id.rs  gender_type.rs  mod.rs  name_short_code_type.rs  publication_language_type.rs  reporting_unit_identifier_id.rs  string_value.rs  stringvalue.rs  voting_channel.rs  voting_method.rs  xsb.rs
src/variants/: candidate_list.rs  election_definition.rs  mod.rs  polling_stations.rs
